--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "core-js": "^3.25.3",
     "element-ui": "^2.15.10",
     "nuxt": "^2.15.8",
@@ -23,6 +24,7 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.1.2",
+    "dotenv": "^16.0.3",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "ts-jest": "^29.0.3",
