--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-frontend",
+  "name": "ecommerce-client-nuxt",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.3.6",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
-    "element-ui": "^2.15.10",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
@@ -21,12 +21,13 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^5.3.3",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.1.2",
-    "dotenv": "^16.0.3",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "postcss": "^8.4.17",
     "ts-jest": "^29.0.3",
     "vue-jest": "^3.0.4"
   }
